@@ -6,98 +6,108 @@ import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
-import no.nav.foreldrepenger.fpformidling.domene.beregningsgrunnlag.AktivitetStatus;
-import no.nav.foreldrepenger.fpformidling.domene.beregningsgrunnlag.Beregningsgrunnlag;
-import no.nav.foreldrepenger.fpformidling.domene.beregningsgrunnlag.BeregningsgrunnlagAktivitetStatus;
-import no.nav.foreldrepenger.fpformidling.domene.beregningsgrunnlag.BeregningsgrunnlagPeriode;
-import no.nav.foreldrepenger.fpformidling.domene.beregningsgrunnlag.BeregningsgrunnlagPrStatusOgAndel;
-import no.nav.foreldrepenger.fpformidling.typer.Beløp;
+import no.nav.foreldrepenger.fpformidling.integrasjon.dokgen.dto.innvilgelsefp.BeregningsgrunnlagAndel;
+import no.nav.foreldrepenger.kontrakter.fpsak.beregningsgrunnlag.v2.BeregningsgrunnlagAndelDto;
+import no.nav.foreldrepenger.kontrakter.fpsak.beregningsgrunnlag.v2.BeregningsgrunnlagDto;
+import no.nav.foreldrepenger.kontrakter.fpsak.beregningsgrunnlag.v2.BeregningsgrunnlagPeriodeDto;
+import no.nav.foreldrepenger.kontrakter.fpsak.beregningsgrunnlag.v2.kodeverk.AktivitetStatusDto;
 
 public final class BeregningsgrunnlagMapper {
 
-    private static final Map<AktivitetStatus, List<AktivitetStatus>> KOMBINERTE_REGEL_STATUSER_MAP = new EnumMap<>(AktivitetStatus.class);
+    private static final Map<AktivitetStatusDto, List<AktivitetStatusDto>> KOMBINERTE_REGEL_STATUSER_MAP = new EnumMap<>(AktivitetStatusDto.class);
 
     static {
-        KOMBINERTE_REGEL_STATUSER_MAP.put(AktivitetStatus.KOMBINERT_AT_FL, List.of(AktivitetStatus.ARBEIDSTAKER, AktivitetStatus.FRILANSER));
-        KOMBINERTE_REGEL_STATUSER_MAP.put(AktivitetStatus.KOMBINERT_AT_SN,
-            List.of(AktivitetStatus.ARBEIDSTAKER, AktivitetStatus.SELVSTENDIG_NÆRINGSDRIVENDE));
-        KOMBINERTE_REGEL_STATUSER_MAP.put(AktivitetStatus.KOMBINERT_AT_FL_SN,
-            List.of(AktivitetStatus.ARBEIDSTAKER, AktivitetStatus.FRILANSER, AktivitetStatus.SELVSTENDIG_NÆRINGSDRIVENDE));
-        KOMBINERTE_REGEL_STATUSER_MAP.put(AktivitetStatus.KOMBINERT_FL_SN,
-            List.of(AktivitetStatus.FRILANSER, AktivitetStatus.SELVSTENDIG_NÆRINGSDRIVENDE));
+        KOMBINERTE_REGEL_STATUSER_MAP.put(AktivitetStatusDto.KOMBINERT_AT_FL, List.of(AktivitetStatusDto.ARBEIDSTAKER, AktivitetStatusDto.FRILANSER));
+        KOMBINERTE_REGEL_STATUSER_MAP.put(AktivitetStatusDto.KOMBINERT_AT_SN,
+            List.of(AktivitetStatusDto.ARBEIDSTAKER, AktivitetStatusDto.SELVSTENDIG_NÆRINGSDRIVENDE));
+        KOMBINERTE_REGEL_STATUSER_MAP.put(AktivitetStatusDto.KOMBINERT_AT_FL_SN,
+            List.of(AktivitetStatusDto.ARBEIDSTAKER, AktivitetStatusDto.FRILANSER, AktivitetStatusDto.SELVSTENDIG_NÆRINGSDRIVENDE));
+        KOMBINERTE_REGEL_STATUSER_MAP.put(AktivitetStatusDto.KOMBINERT_FL_SN,
+            List.of(AktivitetStatusDto.FRILANSER, AktivitetStatusDto.SELVSTENDIG_NÆRINGSDRIVENDE));
     }
 
     private BeregningsgrunnlagMapper() {
     }
 
-    public static List<BeregningsgrunnlagPrStatusOgAndel> finnAktivitetStatuserForAndeler(BeregningsgrunnlagAktivitetStatus bgAktivitetStatus,
-                                                                                          List<BeregningsgrunnlagPrStatusOgAndel> bgpsaListe) {
-        List<BeregningsgrunnlagPrStatusOgAndel> resultatListe;
+    public static List<BeregningsgrunnlagAndelDto> finnAktivitetStatuserForAndeler(AktivitetStatusDto bgAktivitetStatus,
+                                                                                List<BeregningsgrunnlagAndelDto> andeler) {
+        List<BeregningsgrunnlagAndelDto> resultatListe;
 
-        if (AktivitetStatus.KUN_YTELSE.equals(bgAktivitetStatus.aktivitetStatus())) {
-            return bgpsaListe;
+        if (AktivitetStatusDto.KUN_YTELSE.equals(bgAktivitetStatus)) {
+            return andeler;
         }
 
-        if (bgAktivitetStatus.aktivitetStatus().harKombinertStatus()) {
-            var relevanteStatuser = KOMBINERTE_REGEL_STATUSER_MAP.get(bgAktivitetStatus.aktivitetStatus());
-            resultatListe = bgpsaListe.stream().filter(andel -> relevanteStatuser.contains(andel.getAktivitetStatus())).toList();
+        if (erKombinertStatus(bgAktivitetStatus)) {
+            var relevanteStatuser = KOMBINERTE_REGEL_STATUSER_MAP.get(bgAktivitetStatus);
+            resultatListe = andeler.stream()
+                .filter(andel -> relevanteStatuser.contains(andel.aktivitetStatus()))
+                .toList();
         } else {
-            resultatListe = bgpsaListe.stream().filter(andel -> bgAktivitetStatus.aktivitetStatus().equals(andel.getAktivitetStatus())).toList();
+            resultatListe = andeler.stream()
+                .filter(andel -> bgAktivitetStatus.equals(andel.aktivitetStatus()))
+                .toList();
 
+
+            //TODO TFP-6069
             // Spesialhåndtering av tilkommet arbeidsforhold for Dagpenger og AAP - andeler som ikke kan mappes gjennom
             // aktivitetesstatuslisten på beregningsgrunnlag da de er tilkommet etter skjæringstidspunkt. Typisk dersom arbeidsgiver er
             // tilkommet etter start permisjon og krever refusjon i permisjonstiden.
-            var aktuelleStatuserForTilkommetArbForhold = List.of(AktivitetStatus.DAGPENGER, AktivitetStatus.ARBEIDSAVKLARINGSPENGER);
-
-            if (resultatListe.stream().anyMatch(br -> aktuelleStatuserForTilkommetArbForhold.contains(br.getAktivitetStatus()))
-                && hentSummertDagsats(resultatListe) != hentSummertDagsats(bgpsaListe)) {
-                var sumTilkommetDagsats = hentSumTilkommetDagsats(bgpsaListe);
-                if (sumTilkommetDagsats != 0) {
-                    resultatListe.forEach(rl -> {
-                        if (aktuelleStatuserForTilkommetArbForhold.contains(rl.getAktivitetStatus())) {
-                            rl.setDagsats(sumTilkommetDagsats);
-                        }
-                    });
-                }
-            }
+//            var aktuelleStatuserForTilkommetArbForhold = List.of(AktivitetStatus.DAGPENGER.getKode(), AktivitetStatus.ARBEIDSAVKLARINGSPENGER.getKode());
+//
+//            if (resultatListe.stream().map(BeregningsgrunnlagAndel::getAktivitetStatus).anyMatch(aktuelleStatuserForTilkommetArbForhold::contains)
+//                && hentSummertDagsats(resultatListe) != hentSummertDagsatsDto(andeler)) {
+//                var sumTilkommetDagsats = hentSumTilkommetDagsats(andeler);
+//                if (sumTilkommetDagsats != 0) {
+//                    resultatListe.forEach(rl -> {
+//                        if (aktuelleStatuserForTilkommetArbForhold.contains(rl.getAktivitetStatus())) {
+//                            rl.setDagsats(sumTilkommetDagsats);
+//                        }
+//                    });
+//                }
+//            }
         }
 
         if (resultatListe.isEmpty()) {
             var sb = new StringBuilder();
-            bgpsaListe.stream().map(BeregningsgrunnlagPrStatusOgAndel::getAktivitetStatus).map(AktivitetStatus::getKode).forEach(sb::append);
-            throw new IllegalStateException(String.format("Fant ingen andeler for status: %s, andeler: %s", bgAktivitetStatus.aktivitetStatus(), sb));
+            andeler.stream().map(BeregningsgrunnlagAndelDto::aktivitetStatus).forEach(sb::append);
+            throw new IllegalStateException(String.format("Fant ingen andeler for status: %s, andeler: %s", bgAktivitetStatus, sb));
         }
         return resultatListe;
     }
 
-    public static long getHalvGOrElseZero(Optional<Beregningsgrunnlag> beregningsgrunnlag) {
-        return beregningsgrunnlag.map(Beregningsgrunnlag::getGrunnbeløp)
-            .map(Beløp::getVerdi)
+    public static boolean erKombinertStatus(AktivitetStatusDto as) {
+        return Set.of(AktivitetStatusDto.KOMBINERT_AT_FL_SN, AktivitetStatusDto.KOMBINERT_AT_FL,
+            AktivitetStatusDto.KOMBINERT_AT_SN, AktivitetStatusDto.KOMBINERT_FL_SN).contains(as);
+    }
+
+    public static long getHalvGOrElseZero(Optional<BeregningsgrunnlagDto> beregningsgrunnlag) {
+        return beregningsgrunnlag.map(BeregningsgrunnlagDto::grunnbeløp)
             .orElse(BigDecimal.ZERO)
             .divide(BigDecimal.valueOf(2), RoundingMode.HALF_UP)
             .longValue();
     }
 
-    private static long hentSummertDagsats(List<BeregningsgrunnlagPrStatusOgAndel> bgpsaListe) {
-        return bgpsaListe.stream().map(BeregningsgrunnlagPrStatusOgAndel::getDagsats).reduce(Long::sum).orElse(0L);
+    private static long hentSummertDagsats(List<BeregningsgrunnlagAndel> andeler) {
+        return andeler.stream().map(BeregningsgrunnlagAndel::getDagsats).reduce(Long::sum).orElse(0L);
     }
 
-    private static long hentSumTilkommetDagsats(List<BeregningsgrunnlagPrStatusOgAndel> bgpsaListe) {
-        return bgpsaListe.stream()
-            .filter(andel -> andel.getDagsats() > 0)
-            .filter(BeregningsgrunnlagPrStatusOgAndel::getErTilkommetAndel)
-            .map(BeregningsgrunnlagPrStatusOgAndel::getDagsats)
+    private static long hentSummertDagsatsDto(List<BeregningsgrunnlagAndelDto> andeler) {
+        return andeler.stream().map(BeregningsgrunnlagAndelDto::dagsats).reduce(Long::sum).orElse(0L);
+    }
+
+    private static long hentSumTilkommetDagsats(List<BeregningsgrunnlagAndelDto> andeler) {
+        return andeler.stream()
+            .filter(andel -> andel.dagsats() > 0)
+            .filter(BeregningsgrunnlagAndelDto::erTilkommetAndel)
+            .map(BeregningsgrunnlagAndelDto::dagsats)
             .reduce(Long::sum)
             .orElse(0L);
     }
 
-    public static List<BeregningsgrunnlagPrStatusOgAndel> finnBgpsaListe(Beregningsgrunnlag beregningsgrunnlag) {
-        return finnFørstePeriode(beregningsgrunnlag).getBeregningsgrunnlagPrStatusOgAndelList();
-    }
-
-    public static BeregningsgrunnlagPeriode finnFørstePeriode(Beregningsgrunnlag beregningsgrunnlag) {
-        return beregningsgrunnlag.getBeregningsgrunnlagPerioder().get(0);
+    public static BeregningsgrunnlagPeriodeDto finnFørstePeriode(BeregningsgrunnlagDto beregningsgrunnlag) {
+        return beregningsgrunnlag.beregningsgrunnlagperioder().getFirst();
     }
 
 }
